<resources>
    <string name="app_name">andFHEM</string>
    <string name="roomTitlePrefix">Room</string>
    <string name="allRoomsTitle">All Rooms</string>
    <string name="deviceDetailPrefix">Details for</string>
    <string name="unsortedRoomName">unsorted</string>
    <string name="deviceName">Name</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="rain">Rain</string>
    <string name="humidity">Humidity</string>
    <string name="actuator">Actuator</string>
    <string name="state">State</string>
    <string name="battery">Battery</string>
    <string name="measured">Measured</string>
    <string name="warnings">Warnings</string>
    <string name="time">Time</string>
    <string name="avgDay">Average Day</string>
    <string name="avgMonth">Average Month</string>
    <string name="isRaining">Is Raining?</string>
    <string name="desiredTemperature">Desired Temperature</string>
    <string name="comfortTemperature">Comfort-Temperature</string>
    <string name="ecoTemperature">Eco-Temperature</string>
    <string name="forecast">Forecast</string>
    <string name="pressure">Pressure</string>
    <string name="dewpoint">Dewpoint</string>
    <string name="rainRate">Rain Rate</string>
    <string name="rainTotal">Rain Total</string>
    <string name="windAvgSpeed">Wind Avg. Speed</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="windDirection">Wind Direction</string>
    <string name="uvValue">UV Value</string>
    <string name="uvRisk">UV Risk</string>
    <string name="rooms">Room</string>
    <string name="counterA">Counter A</string>
    <string name="counterB">Counter B</string>
    <string name="present">Present</string>
    <string name="currentUsage">Current Usage</string>
    <string name="dayUsage">Day Usage</string>
    <string name="dayLastUsage">Last day Usage</string>
    <string name="monthUsage">Month Usage</string>
    <string name="yearUsage">Year Usage</string>
    <string name="lastStateChange">Last State Change</string>
    <string name="lastState">Last State</string>
    <string name="power">Power</string>
    <string name="audio">Audio</string>
    <string name="input">Input</string>
    <string name="mode">Mode</string>
    <string name="definition">Definition</string>
    <string name="optional">optional</string>
    <string name="regression">regression</string>
    <string name="sum">Sum</string>
    <string name="mac">MAC address</string>
    <string name="ip">IP address</string>
    <string name="wake">Wake</string>
    <string name="shutdown">Shutdown</string>
    <string name="stateAppendix">Zustand Anhang</string>
    <string name="requestRefresh">Request refresh</string>
    <string name="delta">Delta</string>
    <string name="weather">Weather</string>
    <string name="currentWeather">Current Weather</string>
    <string name="weatherForecast">Weather Forecast</string>
    <string name="dimUp">Dim +</string>
    <string name="dimDown">Dim -</string>
    <string name="actions">Actions</string>
    <string name="model">Model</string>
    <string name="send">Send</string>
    <string name="error">Error!</string>
    <string name="errorDeviceListLoad">Could not load %1$s device(s) (types: %2$s)!</string>
    <string name="conversion">Conversion</string>
    <string name="hex2quat">Hex -> Quat</string>
    <string name="quat2hex">Quat -> Hex</string>
    <string name="result">Result</string>
    <string name="set_value">Set value</string>
    <string name="set">Set</string>
    <string name="floorplan">Floorplan</string>
    <string name="floorplan_move_confirmation">Do you really want to move %1$s to %2$s?</string>
    <string name="android_version">Android Version</string>
    <string name="feature_requires_android_version">This feature requires a minimum Android version of %1$s.</string>
    <string name="unknown">unknown</string>
    <string name="type">Type</string>
    <string name="about">About</string>
    <string name="commandAccepted">Command accepted?</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="stop">stop</string>
    <string name="visibility">visibility</string>
    <string name="rawValue">Raw value</string>
    <string name="content">Content</string>
    <string name="fillPercentage">Fill percentage</string>
    <string name="maximumContent">Maximum content</string>
    <string name="currentSwitchTime">Current Switch Time</string>
    <string name="currentSwitchDevice">Current Device</string>
    <string name="lastSwitchTime">Last Trigger</string>
    <string name="nextSwitchTime">Next Trigger</string>
    <string name="windchill">Windchill</string>
    <string name="deleteConfirmation">Are you sure you want to delete the device from FHEM?</string>
    <string name="isActive">Active?</string>
    <string name="deactivated">deactivated</string>
    <string name="showPassword">Show password</string>
    <string name="brightness">Brightness</string>
    <string name="motion">Motion</string>
    <string name="thermostatThresholdOn">Thermostat On-Threshold</string>
    <string name="thermostatThresholdOff">Thermostat Off-Threshold</string>
    <string name="valveThresholdOff">Valve Off-Threshold</string>
    <string name="valveThresholdOn">Valve On-Threshold</string>
    <string name="ecoThresholdOn">Eco Off-Threshold</string>
    <string name="ecoThresholdOff">Eco On-Threshold</string>
    <string name="excludedDevices">Excluded devices</string>
    <string name="idleDevices">Idle devices</string>
    <string name="demandDevices">Demand devices</string>
    <string name="target">Target</string>
    <string name="noGraphEntries">No graph entries found that match the selected time range. Does your FileLog contain
        any matching entries?
    </string>
    <string name="delete">Delete</string>
    <string name="deleteConfirmIntervalText">Do you really want to delete the interval?</string>
    <string name="newInterval">New interval</string>
    <string name="price">Price</string>
    <string name="energy">Energy</string>
    <string name="cumulativeKwH">Cumulative</string>
    <string name="voltage">Voltage</string>
    <string name="current">Current</string>
    <string name="saturation">Saturation</string>
    <string name="hue">Hue</string>
    <string name="alarm">Alarm</string>
    <string name="apiKey">API Key</string>
    <string name="gcmAlreadyRegistered">Device is already registered!</string>
    <string name="gcmRegistrationNotActive">GCM not active! Is the project id valid?</string>
    <string name="gcmRegisterThis">Register this device</string>
    <string name="notificationAllUpdates">All updates</string>
    <string name="notificationStateUpdates">Only state updates</string>
    <string name="notificationNoUpdates">None</string>
    <string name="callMonExternalName">Caller</string>
    <string name="callMonExternalNumber">Number external</string>
    <string name="callMonInternalNumber">Number internal</string>
    <string name="callMonDuration">Duration</string>
    <string name="callMonEvent">Event</string>
    <string name="callMonEventRing">Ringing</string>
    <string name="callMonEventCall">Calling</string>
    <string name="callMonEventConnect">Connected</string>
    <string name="callMonEventDisconnect">Disconnect</string>
    <string name="callMonEventMissed">Missed</string>
    <string name="webcmd">WebCmds</string>
    <string name="switchDevice">Switch</string>
    <string name="preferences">Preferences</string>
    <string name="update">Update</string>
    <string name="updating">Updating ...</string>
    <string name="loading">Loading ...</string>
    <string name="executing">Executing ...</string>
    <string name="help">Help</string>
    <string name="donate">Donate</string>
    <string name="send_command">Send Command</string>
    <string name="command_execution_result">Command Result</string>
    <string name="context_addtofavorites">Add to favorites</string>
    <string name="context_removefavorite">Remove favorite</string>
    <string name="context_favoriteadded">Favorite was added!</string>
    <string name="context_favoriteremoved">Favorite was removed!</string>
    <string name="context_rename">Rename device</string>
    <string name="context_alias">Set alias</string>
    <string name="context_delete">Delete device</string>
    <string name="context_move">Move device</string>
    <string name="context_notification">Notifications</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="areYouSureText">Are you sure you want to set %1$s to %2$s?</string>
    <string name="setMode">Set Mode</string>
    <string name="tab_roomList">Rooms</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_alldevices">All Devices</string>
    <string name="prefDataSourceCategory">Data Source</string>
    <string name="prefDataSource">Data Source</string>
    <string name="prefOtherPreferencesCategory">Other Preferences</string>
    <string name="prefWidgetCategory">Widgets</string>
    <string name="prefTelnetUrlSummary">i.e. 192.168.0.1</string>
    <string name="prefTelnetUrl">IP</string>
    <string name="prefTelnetPortSummary">i.e. 7072</string>
    <string name="prefTelnetPort">Port</string>
    <string name="prefFHEMWEBUrl">URL</string>
    <string name="prefFHEMWEBUrlSummary">i.e. http://192.168.0.1:8083/fhem</string>
    <string name="prefFHEMWEBClientCertPassword">Password client certificate</string>
    <string name="prefFHEMWEBClientCertPasswordSummary">Password for client certificate</string>
    <string name="prefFHEMWEBClientCertPathSummary">Absolute path to client certificate</string>
    <string name="prefFHEMWEBClientCertPath">Path client certificate</string>
    <string name="prefUsername">Username</string>
    <string name="prefPassword">Password</string>
    <string name="prefShowHiddenDevices">Show hidden devices</string>
    <string name="prefDefaultTimespan">Graph Timespan</string>
    <string name="prefAutoUpdate">Auto Update</string>
    <string name="prefAutoUpdateSummary">only when application is running</string>
    <string name="prefWidgetRemoteUpdate">Remote Update</string>
    <string name="prefDeviceColumnWidth">Device column width</string>
    <string name="prefDeviceColumnWidthSummary">Minimum width of the device columns</string>
    <string name="prefDeviceListPaddingRight">Device list padding</string>
    <string name="prefDeviceListPaddingRightSummary">Right-padding</string>
    <string name="prefWidgetUpdateTimeWLAN">WLAN update interval</string>
    <string name="prefWidgetUpdateTimeMobile">Mobile update interval</string>
    <string name="prefWidgetUpdateTimeSummary">default 1 times per hour</string>
    <string name="prefDeviceTypeOrder">Device type order</string>
    <string name="prefDeviceTypeOrderSummary">Order of device types as well as hide and view</string>
    <string name="prefUpdateOnApplicationStart">Refresh on application start</string>
    <string name="prefShowSetValueButtons">Show set value buttons for temperature changes</string>
    <string name="prefGCMProjectId">GCM Project ID</string>
    <string name="prefGcmWidgetUpdate">Update widget upon GCM notification</string>
    <string name="notNumericError">Not numeric!</string>
    <string name="updateError">Error while updating.</string>
    <string name="timeoutError">Connection timed out.</string>
    <string name="executeError">Error while executing command.</string>
    <string name="updateErrorHostConnection">Cannot connect to host.</string>
    <string name="updateErrorDeviceListParse">Could not parse xml device list.</string>
    <string name="generalDetails">General Details</string>
    <string name="plots">Plots</string>
    <string name="premium">AndFHEM Premium</string>
    <string name="timer">Timer</string>
</resources>