<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ AndFHEM - Open Source Android application to control a FHEM home automation
  ~ server.
  ~
  ~ Copyright (c) 2011, Matthias Klass or third-party contributors as
  ~ indicated by the @author tags or express copyright attribution
  ~ statements applied by the authors.  All third-party contributions are
  ~ distributed under license by Red Hat Inc.
  ~
  ~ This copyrighted material is made available to anyone wishing to use, modify,
  ~ copy, or redistribute it subject to the terms and conditions of the GNU GENERAL PUBLIC LICENSE, as published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU GENERAL PUBLIC LICENSE
  ~ for more details.
  ~
  ~ You should have received a copy of the GNU GENERAL PUBLIC LICENSE
  ~ along with this distribution; if not, write to:
  ~   Free Software Foundation, Inc.
  ~   51 Franklin Street, Fifth Floor
  ~   Boston, MA  02110-1301  USA
  -->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="first_preferencescreen"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">

    <PreferenceCategory android:title="@string/prefDataSourceCategory" android:key="DATAORIGINCATEGORY">

        <ListPreference
                android:title="@string/prefDataSource"
                android:id="@+id/dataOriginSelector"
                android:summary=""
                android:key="CONNECTION_TYPE"
                android:defaultValue=""
                android:entries="@array/dataOriginEntries"
                android:entryValues="@array/dataOriginValues" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefWidgetCategory" android:key="DATAORIGINCATEGORY">
        <CheckBoxPreference
                android:key="prefWidgetRemoteUpdate"
                android:title="@string/prefWidgetRemoteUpdate"
                android:defaultValue="true"
                />
        <ListPreference
                android:title="@string/prefWidgetUpdateTime"
                android:summary="@string/prefWidgetUpdateTimeSummary"
                android:key="WIDGET_UPDATE_INTERVAL"
                android:defaultValue="3600"
                android:entries="@array/widgetUpdateTimeEntries"
                android:entryValues="@array/widgetUpdateTimeValues" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefOtherPreferencesCategory">
        <CheckBoxPreference
                android:key="prefShowHiddenDevices"
                android:title="@string/prefShowHiddenDevices"
                android:defaultValue="false"
                />
        <CheckBoxPreference
                android:key="UPDATE_ON_APPLICATION_START"
                android:title="@string/prefUpdateOnApplicationStart"
                android:defaultValue="false"
                />
        <CheckBoxPreference
                android:key="SHOW_SET_VALUE_BUTTONS"
                android:title="@string/prefShowSetValueButtons"
                android:defaultValue="false"
                />
        <ListPreference
                android:title="@string/prefDefaultTimespan"
                android:id="@+id/graphDefaultTimespanSelector"
                android:summary=""
                android:key="GRAPH_DEFAULT_TIMESPAN"
                android:defaultValue="24"
                android:entries="@array/graphDefaultTimespanEntries"
                android:entryValues="@array/graphDefaultTimespanValues" />
        <ListPreference
                android:title="@string/prefAutoUpdate"
                android:summary="@string/prefAutoUpdateSummary"
                android:id="@+id/autoUpdateTime"
                android:key="AUTO_UPDATE_TIME"
                android:defaultValue="-1"
                android:entries="@array/updateRoomListTimeEntries"
                android:entryValues="@array/updateRoomListTimeValues" />
        <com.hlidskialf.android.preference.SeekBarPreference xmlns:android="http://schemas.android.com/apk/res/android"
                                                             android:layout_height="wrap_content"
                                                             android:layout_width="wrap_content"
                                                             android:key="DEVICE_COLUMN_WIDTH"
                                                             android:title="@string/prefDeviceColumnWidth"
                                                             android:summary="@string/prefDeviceColumnWidthSummary"
                                                             android:dialogMessage=""
                                                             android:defaultValue="5"
                                                             android:text=" dp"
                                                             android:max="1000"
                />
        <com.hlidskialf.android.preference.SeekBarPreference xmlns:android="http://schemas.android.com/apk/res/android"
                                                             android:layout_height="wrap_content"
                                                             android:layout_width="wrap_content"
                                                             android:key="DEVICE_LIST_PADDING_RIGHT"
                                                             android:title="@string/prefDeviceListPaddingRight"
                                                             android:summary="@string/prefDeviceListPaddingRightSummary"
                                                             android:dialogMessage=""
                                                             android:defaultValue="0"
                                                             android:text=" dp"
                                                             android:max="1000"
                />
        <li.klass.fhem.widget.deviceType.DeviceTypeOrderPreference xmlns:android="http://schemas.android.com/apk/res/android"
                                                                   android:layout_height="wrap_content"
                                                                   android:layout_width="wrap_content"
                                                                   android:key="DEVICE_TYPE_ORDER_VISIBLE"
                                                                   android:title="@string/prefDeviceTypeOrder"
                                                                   android:summary="@string/prefDeviceTypeOrderSummary" />




    </PreferenceCategory>
</PreferenceScreen>
