<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ AndFHEM - Open Source Android application to control a FHEM home automation
  ~ server.
  ~
  ~ Copyright (c) 2011, Matthias Klass or third-party contributors as
  ~ indicated by the @author tags or express copyright attribution
  ~ statements applied by the authors.  All third-party contributions are
  ~ distributed under license by Red Hat Inc.
  ~
  ~ This copyrighted material is made available to anyone wishing to use, modify,
  ~ copy, or redistribute it subject to the terms and conditions of the GNU GENERAL PUBLICLICENSE, as published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU GENERAL PUBLIC LICENSE
  ~ for more details.
  ~
  ~ You should have received a copy of the GNU GENERAL PUBLIC LICENSE
  ~ along with this distribution; if not, write to:
  ~   Free Software Foundation, Inc.
  ~   51 Franklin Street, Fifth Floor
  ~   Boston, MA  02110-1301  USA
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_refresh" android:showAsAction="always"
          android:title="@string/update" android:icon="@drawable/ic_menu_refresh"/>
    <item android:id="@+id/menu_refresh_progress"
          android:actionLayout="@layout/progress"
          android:showAsAction="always"
          android:visible="false" />
    <item android:id="@+id/menu_settings" android:showAsAction="ifRoom"
          android:title="@string/update" android:icon="@android:drawable/ic_menu_preferences" />
    <item android:id="@+id/menu_help" android:showAsAction="ifRoom"
          android:title="@string/help" android:icon="@android:drawable/ic_menu_help" />
    <item android:id="@+id/menu_command" android:showAsAction="ifRoom"
          android:title="@string/send_command" android:icon="@android:drawable/ic_menu_send" />
    <item android:id="@+id/menu_conversion" android:showAsAction="ifRoom"
          android:title="@string/conversion" android:icon="@android:drawable/ic_menu_recent_history" />
    <item android:id="@+id/menu_premium" android:showAsAction="ifRoom"
          android:title="@string/premium" android:icon="@android:drawable/ic_menu_agenda" />
    <item android:id="@+id/menu_timer" android:showAsAction="ifRoom"
          android:title="@string/timer" android:icon="@android:drawable/ic_menu_week" />
    <item android:id="@+id/menu_about" android:showAsAction="ifRoom"
          android:title="@string/about" android:icon="@android:drawable/ic_menu_info_details" />
</menu>