<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ AndFHEM - Open Source Android application to control a FHEM home automation
  ~ server.
  ~
  ~ Copyright (c) 2012, Matthias Klass or third-party contributors as
  ~ indicated by the @author tags or express copyright attribution
  ~ statements applied by the authors.  All third-party contributions are
  ~ distributed under license by Red Hat Inc.
  ~
  ~ This copyrighted material is made available to anyone wishing to use, modify,
  ~ copy, or redistribute it subject to the terms and conditions of the GNU GENERAL PUBLICLICENSE, as published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU GENERAL PUBLIC LICENSE
  ~ for more details.
  ~
  ~ You should have received a copy of the GNU GENERAL PUBLIC LICENSE
  ~ along with this distribution; if not, write to:
  ~   Free Software Foundation, Inc.
  ~   51 Franklin Street, Fifth Floor
  -->

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical">

    <TextView style="@style/deviceDetailSectionCaption"
              android:text="@string/generalDetails">
    </TextView>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/generic"
                 style="@style/deviceDetailTable">
        <TableRow android:id="@+id/tableRowDeviceName">
            <TextView android:text="@string/deviceName"
                      style="@style/deviceDetailDescription" />
            <TextView android:id="@+id/deviceName"
                      android:text="xxxxxxxx"
                      style="@style/deviceDetailContent"/>
        </TableRow>

        <TableRow android:id="@+id/tableRowRoom">
            <TextView android:text="@string/rooms"
                      style="@style/deviceDetailDescription" />
            <TextView android:id="@+id/rooms"
                      android:text="xxxxx"
                      style="@style/deviceDetailContent" />
        </TableRow>

        <TableRow android:id="@+id/tableRowDef">
            <TextView android:text="@string/definition"
                      style="@style/deviceDetailDescription" />
            <TextView android:id="@+id/def"
                      android:text="xxxxx"
                      style="@style/deviceDetailContent" />
        </TableRow>

        <TableRow android:id="@+id/tableRowMeasured">
            <TextView android:text="@string/measured"
                      style="@style/deviceDetailDescription" />
            <TextView android:id="@+id/measured"
                      android:text="xx.xx.xxxx xx:xx"
                      style="@style/deviceDetailContent" />
        </TableRow>
    </TableLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:orientation="vertical"
                  android:id="@+id/graphButtons">

        <TextView style="@style/deviceDetailSectionCaption"
                  android:text="@string/plots" />
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:orientation="vertical"
                  android:id="@+id/actionButtons">

        <TextView style="@style/deviceDetailSectionCaption"
                  android:text="@string/actions" />
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:orientation="vertical"
                  android:id="@+id/otherStuff">
    </LinearLayout>
</LinearLayout>