<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ AndFHEM - Open Source Android application to control a FHEM home automation
  ~  server.
  ~
  ~  Copyright (c) 2012, Matthias Klass or third-party contributors as
  ~  indicated by the @author tags or express copyright attribution
  ~  statements applied by the authors.  All third-party contributions are
  ~  distributed under license by Red Hat Inc.
  ~
  ~  This copyrighted material is made available to anyone wishing to use, modify,
  ~  copy, or redistribute it subject to the terms and conditions of the GNU GENERAL PUBLICLICENSE, as published by the Free Software Foundation.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~  or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU GENERAL PUBLIC LICENSE
  ~  for more details.
  ~
  ~  You should have received a copy of the GNU GENERAL PUBLIC LICENSE
  ~  along with this distribution; if not, write to:
  ~    Free Software Foundation, Inc.
  ~    51 Franklin Street, Fifth Floor
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp">

    <TextView android:layout_height="40dp"
                 android:layout_width="40dp"
                 android:contentDescription="@string/visibility"
                 android:background="@drawable/icmpmove"
                 android:id="@+id/drag"/>

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:id="@+id/name"
              android:layout_marginTop="10dp"
              android:text="@string/deviceName"
              android:layout_toRightOf="@+id/drag"
              android:gravity="center_vertical"/>
    <ImageButton android:layout_height="40dp"
                 android:layout_width="40dp"
                 android:contentDescription="@string/visibility"
                 android:background="@drawable/visibility"
                 android:layout_alignParentRight="true"
                 android:id="@+id/change_visibility"/>
    <ImageButton android:layout_height="40dp"
                 android:layout_width="40dp"
                 android:contentDescription="@string/up"
                 android:layout_toLeftOf="@+id/change_visibility"
                 android:background="@drawable/button_up"
                 android:id="@+id/move_up"/>
    <ImageButton android:layout_height="40dp"
                 android:layout_width="40dp"
                 android:contentDescription="@string/down"
                 android:background="@drawable/button_down"
                 android:layout_toLeftOf="@+id/move_up"
                 android:id="@+id/move_down"/>
</RelativeLayout>